# FastapiRestaurant

./: .dockerignore  .env-example  .gitignore  API_EXAMPLES.md  Dockerfile  Dockerfile.menu  Dockerfile.order  Dockerfile.payment  Dockerfile.some  Dockerfile.users  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_payment.sh
init-scripts/: fill_all_tables.sql  init_db.sql  seed_data.sql
src/: database.py  main.py  menu_main.py  order_main.py  payment_main.py  rabbitmq.py  redis.py  some_main.py  users_main.py
src/application/auth/: auth.py
src/core/: config.py  dependencies.py  security.py
src/domain/: menu.py  order.py  payment.py  user.py
src/infrastructure/models/: __init__.py  menu.py  order.py  payment.py  user.py
src/infrastructure/repositories/: menu.py  order.py  payment.py  user.py
src/infrastructure/services/: gateway_payment.py  menu_events.py  menu_events_service.py  payment_service.py  retry.py  sms.py
src/interfaces/routers/: auth.py  order.py  payment.py  users.py
src/interfaces/routers/v1/: menu.py
src/interfaces/routers/v2/: menu.py
src/migrations/: env.py
src/migrations/versions/: 001_update_payment_table.py  0c8c859913da_added_combo_sets_models.py  166a060cf658_create_order_tables.py  38ac7e9b3684_added_combo_sets_models.py  846fe29ad408_initial_migration.py  8d00f14a45d5_initial_migration.py  b5ad09a17e0f_create_order_tables.py  e5d8128b7da1_initial.py  e9ecdc50c586_create_menu_tables.py  f2715c0d8667_merge_heads.py  initial.py
src/schemas/: menu_schemas.py  order_schemas.py  payment_schemas.py  user_schemas.py
tests/: test_menu.py
